[css-flexbox] childIntrinsicWidth needs to actually return the intrinsic width

This function is used to determine the cross size of a flex
line. If we just use .width() then it is potentially affected
by a previous layout where we already stretched the child.
To avoid that, switch to maxPreferredLogicalWidth() --
we already use that in childIntrinsicHeight, and we also
use intrinsicContentLogicalHeight() for the height case.

However, if we have a non-auto width, we can't necessarily
just call maxPreferredLogicalWidth; the preferred width
may not have percentages correctly resolved, for example.

TEST=css3/flexbox/wrapping-column-dynamic-changes.html
BUG=607856,607262

Review-Url: https://codereview.chromium.org/2104123002
Cr-Commit-Position: refs/heads/master@{#402932}

Former-commit-id: c83fe889c7045ad03b0b0a2e8d4fdcf1330d29ce